# clob-rs

./: Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: derive-keys.md  derive-keys.rs  order.md  order.rs  reading.md  reading.rs
src/: client.rs  config.rs  endpoints.rs  error.rs  headers.rs  lib.rs  main.rs  order_builder.rs  signer.rs  types.rs
src/signing/: eip712.rs  hmac.rs  mod.rs
tests/: client_tests.rs  headers_tests.rs  hmac_tests.rs  order_builder_tests.rs  signing_tests.rs
