[package]
name = "clob-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["arbitrary_precision"] }
serde-aux = "4"
tokio = { version = "1", features = ["full"] }
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }

# Crypto / signing
alloy-primitives = "0.8"
alloy-signer = "0.6"
alloy-signer-local = "0.6"
alloy-sol-types = "0.8"
alloy-dyn-abi = "0.8"

# HMAC for L2 auth
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"

# Hex encoding
hex = "0.4"

# Random for salt generation
rand = "0.8"

[dev-dependencies]
alloy-primitives = "0.8"
